--- a/DogsRandomPhoto/Screens/Base.lproj/Main.storyboard
+++ b/DogsRandomPhoto/Screens/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2d3-QK-BSE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2d3-QK-BSE">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -12,7 +12,7 @@
         <!--Choose Action-->
         <scene sceneID="Gjp-bb-zTV">
             <objects>
-                <collectionViewController id="6hJ-Vd-DmT" customClass="MainViewController" customModule="DogsAndCatsPhotosApp" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="6hJ-Vd-DmT" customClass="MainViewController" customModule="DogsRandomPhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="pN9-7n-XeX">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,21 +24,23 @@
                             <inset key="sectionInset" minX="0.0" minY="40" maxX="0.0" maxY="40"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="RfZ-Kr-Qog" customClass="UserActionCell" customModule="DogsAndCatsPhotosApp" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="RfZ-Kr-Qog" customClass="UserActionCell" customModule="DogsRandomPhotoApp" customModuleProvider="target">
                                 <rect key="frame" x="10" y="40" width="300" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="OhK-NR-PPa">
                                     <rect key="frame" x="0.0" y="0.0" width="300" height="128"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VIe-SV-3EK">
-                                            <rect key="frame" x="114" y="45.5" width="72" height="37"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="VIe-SV-3EK">
+                                            <rect key="frame" x="10" y="45.5" width="280" height="37"/>
                                             <fontDescription key="fontDescription" name="Didot-Italic" family="Didot" pointSize="30"/>
                                             <color key="textColor" red="0.60784316059999999" green="0.109803915" blue="0.1215686351" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="VIe-SV-3EK" secondAttribute="trailing" constant="10" id="4sW-IV-VTi"/>
+                                        <constraint firstItem="VIe-SV-3EK" firstAttribute="leading" secondItem="OhK-NR-PPa" secondAttribute="leading" constant="10" id="clU-47-clg"/>
                                         <constraint firstItem="VIe-SV-3EK" firstAttribute="centerY" secondItem="OhK-NR-PPa" secondAttribute="centerY" id="ehZ-07-54G"/>
                                         <constraint firstItem="VIe-SV-3EK" firstAttribute="centerX" secondItem="OhK-NR-PPa" secondAttribute="centerX" id="vC4-6e-jOZ"/>
                                     </constraints>
@@ -72,7 +74,7 @@
         <!--Image View Controller-->
         <scene sceneID="6ZA-31-bwd">
             <objects>
-                <viewController id="d5y-Mb-G4J" customClass="ImageViewController" customModule="DogsAndCatsPhotosApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="d5y-Mb-G4J" customClass="ImageViewController" customModule="DogsRandomPhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9J4-DL-CSA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -80,7 +82,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Dhh-0W-IYW">
                                 <rect key="frame" x="150" y="274" width="20" height="20"/>
                             </activityIndicatorView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CGh-aU-WcL">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CGh-aU-WcL">
                                 <rect key="frame" x="0.0" y="44" width="320" height="524"/>
                             </imageView>
                         </subviews>
